<resources>
    <string name="app_name">PAYBACK</string>
    <string name="Btn_PAYBACK">PAYBACK Coding Challenge</string>
    <string name="Check_Network">Check Network</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="SearchField">Search:</string>
    <string name="CheckNetwork">Check Network</string>
    <string name="ProgressBarDialog">Please Wait…</string>
    <string name="NoDataFetched">No Data Fetched</string>
    <string name="fruits">fruits</string>
    <string name="object">object</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ImageInLargeSize">ImageInLargeSize</string>
    <string name="tags">tags</string>
    <string name="UserDetail">userDetail</string>
    <string name="ImageDownload">ImageDownload</string>
    <string name="ImageComment">ImageComment</string>
    <string name="ImageLike">ImageLike</string>
    <string name="ImageOfSearchIcon">imageofsearchicon</string>
    <string name="Search">search</string>
    <string name="NoConnection">No Connection</string>
    <string name="Connected">Connected</string>
    <string name="ImageOfContent">ImageOfContent</string>
    <string name="ImageOfProgressBar">ImageOfProgressBar</string>


</resources>