<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainFragment"
    android:id="@+id/parentLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/IntentCallApi"
            android:layout_width="305dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/light_blue_900"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/Btn_PAYBACK"
            android:textAllCaps="false"
            android:textSize="@dimen/HeaderSections">

        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Connected"
        android:textColor="#ff669900"
        android:textSize="@dimen/connection"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="699dp" />
    <TextView
        android:id="@+id/not_connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/NoConnection"
        android:textColor="#ffcc0000"
        android:textSize="@dimen/connection"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textStyle="bold"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="699dp" />

</androidx.constraintlayout.widget.ConstraintLayout>