<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="metadata"
            type="com.example.payback.models.Hits" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical"
        tools:context=".activities.HitDetailActivity">

        <ImageView
            android:id="@+id/DetailItemImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/ImageInLargeSize"
            app:imageUrl="@{metadata.largeImageURL}"
            android:lines="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/UserDetail"
                    android:layout_gravity="center_vertical"
                    app:imageUrl="@{metadata.userImageURL}"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/UserNameDetailTextView"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="40dp"
                android:paddingStart="5dp"
                android:fontFamily="@font/roboto_regular"
                android:paddingEnd="1dp"
                android:textStyle="bold"
                android:text="@{metadata.user}"
                android:gravity="center_vertical"
                android:textColor="@color/black"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="40dp"
            app:cardCornerRadius="25dp">
            <ImageView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:contentDescription="@string/tags"
                android:layout_height="match_parent"
                android:src="@drawable/tag"
                android:textStyle="bold"
                android:layoutDirection="ltr"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/TagsDetailTextView"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="1dp"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@{metadata.tags}"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/like"
                    android:layout_width="0dp"
                    android:contentDescription="@string/ImageLike"
                    android:layout_weight="4"
                    tools:ignore="NestedWeights"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:src="@drawable/likeicon"
                    android:textStyle="bold"
                    android:layoutDirection="ltr"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/LikesDetailTextView"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="match_parent"
                    android:paddingStart="5dp"
                    android:paddingEnd="1dp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@{metadata.likes.toString()}"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:contentDescription="@string/ImageComment"
                    android:layout_weight="4"
                    tools:ignore="NestedWeights"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:src="@drawable/commenticon"
                    android:textStyle="bold"
                    android:layoutDirection="ltr"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/CommentsDetailTextView"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:paddingStart="5dp"
                    android:paddingEnd="1dp"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:text="@{metadata.comments.toString()}">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/download"
                    android:layout_width="0dp"
                    android:contentDescription="@string/ImageDownload"
                    android:layout_weight="4"
                    tools:ignore="NestedWeights"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:paddingEnd="1dp"
                    android:src="@drawable/downloadicon"
                    android:textStyle="bold"
                    android:layoutDirection="ltr"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/DownloadsDetailTextView"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@{metadata.downloads.toString()}"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>